fixed css on about page and added footer

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -32,6 +32,12 @@
   position: fixed;
   width: 100%;
 }
+.Footer {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+}
 
 @keyframes App-logo-spin {
   from {
