--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,3 +47,13 @@
     transform: rotate(360deg);
   }
 }
+
+#backgroundHome {
+  background-color: #000000;
+  background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png");
+}
+
+#backgroundProjects {
+  background-color: #000000;
+  background-image: url("https://www.transparenttextures.com/patterns/binding-dark.png");
+}
